# Parkinson-Simulation

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
dashboard/components/: g0_viewer.py  graph_compute_panel.py  graph_level_pages.py  graph_png_export_panel.py  graph_tables.py
dashboard/pages/: docs.py  g0.py  g1.py  g2.py  g3.py  initialization.py  metrics.py  parameters.py  simulation.py  spatial_reconstruction.py
dashboard/services/: g0_view_service.py  g3_annotation_service.py  graph_compute_service.py  graph_level_view_service.py  graph_png_export_service.py  initialization_service.py  metrics_service.py  parameter_service.py  simulation_service.py  spatial_reconstruction_service.py
output/analysis/: mechanism_metrics_latest.json
output/simulation/: tick_metrics.csv
specifics/: agents_overview.md  ai_declaration.md  data_pipeline.md  multilevel.md  parameters_guide.md
specifics/agents/: agent_alpha_aggregate.md  agent_alpha_synuclein.md  agent_astrocyte.md  agent_lysosome.md  agent_microglia.md  agent_mitochondrion.md  agent_neuron.md
src/analysis/: g0_lexer.py  intervention_metrics.py  mechanism_metrics.py  validate_g0_trace.py  validate_initialization_log.py
src/configuration/: param_editing.py
src/intra/: agent_alpha.py  agent_degrading.py  agent_mitochondria.py  env_intra.py
src/simulation/: __init__.py  engine.py  substantia_nigra.py
src/visualization/: plot_alpha_aggregate.py  plot_alpha_free.py  plot_alpha_metrics.py  plot_neuron_states.py  plot_substantia_nigra_metrics.py  tick_metrics_plotter.py
test/analysis/: test_mechanism_metrics.py
test/simulation/: substantia_nigra_test.py  test_aggregate_registry.py  test_alpha_transmission.py  (+11 more)
(+111 files in other folders)
