[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkinson-simulation"
version = "0.1.0"
description = "Agent-based framework for simulating, analysing and visualising simplified mechanisms involved in Parkinson's disease progression."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "ammermali" }
]

keywords = [
  "agent-based-simulation",
  "parkinson",
  "repast4py",
  "mpi",
  "streamlit",
  "causal-graphs",
  "computational-modeling"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific"
]

dependencies = [
  "repast4py",
  "mpi4py",
  "PyYAML",
  "networkx",
  "matplotlib",
  "Pillow",
  "streamlit",
  "pandas",
  "plotly",
  "pyvis",
  "psutil",
  "numpy",
  "scipy",
  "multilevelgraphs @ git+https://github.com/marco-caputo/multilevel-graphs.git",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Repository = "https://github.com/ammermali/Parkinson-Simulation"

[tool.setuptools]
include-package-data = true
py-modules = ["main", "app"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "src*",
  "dashboard*",
]

[tool.setuptools.package-data]
"*" = [
  "*.yaml",
  "*.yml",
  "*.json",
  "*.jsonl",
  "*.md",
  "*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"